--- a/Auth/InscriUtilisateur.html
+++ b/Auth/InscriUtilisateur.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h2>Inscription Utilisateur</h2>
-    <form action="InscriCan.php" method="post">
+    <?php
+    if(isset($message)) {
+        echo $message;
+    }
+    ?>
+<form action="InscriUtilisateur.php" method="post">
         <label for="name">Nom:</label>
         <input type="text" name="name" required><br>
 
