up shedly commit

--- a/Auth/InscriUtilisateur.html
+++ b/Auth/InscriUtilisateur.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h2>Inscription Utilisateur</h2>
-    <?php
+    <!-- <?php
     if(isset($message)) {
         echo $message;
     }
-    ?>
+    ?> -->
 <form action="InscriUtilisateur.php" method="post">
         <label for="name">Nom:</label>
         <input type="text" name="name" required><br>
