--- a/Auth/login.html
+++ b/Auth/login.html
@@ -1,9 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <script>
+        function storeInLocalStorage(userId, userType) {
+            localStorage.setItem('user_id', userId);
+            localStorage.setItem('user_type', userType);
+        }
+    </script>
 </head>
 <body>
     <h2>Login</h2>
