--- a/Auth/InscriUtilisateur.html
+++ b/Auth/InscriUtilisateur.html
@@ -3,25 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css.css">
     <title>Inscription Utilisateur</title>
 </head>
 <body>
-    <h2>Inscription Utilisateur</h2>
   
-<form action="InscriUtilisateur.php" method="post">
-        <label for="name">Nom:</label>
-        <input type="text" name="name" required><br>
+    <div class="container-register">
+          <h2>Inscription Utilisateur</h2>
 
-        <label for="lastname">Prénom:</label>
-        <input type="text" name="lastname" required><br>
+        <form action="InscriUtilisateur.php" method="post" autocomplete="on">
+            <!-- Nom -->
+            <div class="box">
+                <label for="Nom" class="fl fontLabel"> Nom: </label>
+                <div class="new iconBox">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                </div>
+                <div class="fr">
+                    <input type="text" name="name" placeholder="Nom" class="textBox" autofocus="on" required>
+                </div>
+                <div class="clr"></div>
+            </div>
+            
+            <!-- Prenom -->
+            <div class="box">
+                <label for="Prenom" class="fl fontLabel"> Prenom: </label>
+                <div class="fl iconBox"><i class="fa fa-user" aria-hidden="true"></i></div>
+                <div class="fr">
+                    <input type="text" required name="lastname" placeholder="Prenom" class="textBox">
+                </div>
+                <div class="clr"></div>
+            </div>
 
-        <label for="mail">Email:</label>
-        <input type="email" name="mail" required><br>
+            <!-- Email -->
+            <div class="box">
+                <label for="email" class="fl fontLabel"> Email : </label>
+                <div class="fl iconBox"><i class="fa fa-envelope" aria-hidden="true"></i></div>
+                <div class="fr">
+                    <input type="email" required name="mail" placeholder="Email Id" class="textBox">
+                </div>
+                <div class="clr"></div>
+            </div>
 
-        <label for="password">Mot de passe:</label>
-        <input type="password" name="password" required><br>
-
-        <input type="submit" value="S'inscrire">
-    </form>
+            <!-- Password -->
+            <div class="box">
+                <label for="password" class="fl fontLabel"> Password </label>
+                <div class="fl iconBox"><i class="fa fa-key" aria-hidden="true"></i></div>
+                <div class="fr">
+                    <input type="Password" required name="password" placeholder="Password" class="textBox">
+                </div>
+                <div class="clr"></div>
+            </div>
+            <div class="box" style="background: #2d3e3f">
+                <input type="Submit" name="Submit" class="submit-register" value="SUBMIT">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
