--- a/Auth/inscriEntreprise.html
+++ b/Auth/inscriEntreprise.html
@@ -10,15 +10,15 @@
         <div class="container-register">
     <h2>Inscription Entreprise</h2>
 
-       <form action="InscriUtilisateur.php" method="post" autocomplete="on">
+       <form action="inscriEntreprise.php" method="post" autocomplete="on">
             <!-- Nom -->
             <div class="box">
-                <label for="nom" class="fl fontLabel"> Nom : </label>
+                <label for="nom_entreprise" class="fl fontLabel"> Nom : </label>
                 <div class="new iconBox">
                     <i class="fa fa-user" aria-hidden="true"></i>
                 </div>
                 <div class="fr">
-                    <input type="text" name="name" placeholder="nom" class="textBox" autofocus="on" required>
+                    <input type="text" name="nom_entreprise" placeholder="nom" class="textBox" autofocus="on" required>
                 </div>
                 <div class="clr"></div>
             </div>
@@ -38,7 +38,7 @@
                 <label for="email" class="fl fontLabel"> Email : </label>
                 <div class="fl iconBox"><i class="fa fa-envelope" aria-hidden="true"></i></div>
                 <div class="fr">
-                    <input type="email" required name="mail" placeholder="Email Id" class="textBox">
+                    <input type="email" required name="email" placeholder="Email Id" class="textBox">
                 </div>
                 <div class="clr"></div>
             </div>
