--- a/Home/index.html
+++ b/Home/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <nav>
-            <img src="images/logo.png" alt="Logo de Job-Board-CH" class="logo" />
+            <img src="Logo-JobBoard.png" alt="Logo de Job-Board-CH" class="logo" />
             <ul>
                 <li><a href="#">Accueil</a></li>
                 <li><a href="#">Offres d'emploi</a></li>
@@ -45,12 +45,12 @@
             </div>
         </section>
 
-        <section class="social-icons">
+        <!-- <section class="social-icons">
             <a href="#"><img src="images/github-fill.png" alt="GitHub"></a>
             <a href="#"><img src="images/linkedin-fill.png" alt="LinkedIn"></a>
             <a href="#"><img src="images/telegram-fill.png" alt="Telegram"></a>
             <a href="https://drive.google.com/file/d/1u2ZQxyamKsgJ4JxO-kYbytfxaaEkOT_a/view?usp=sharing" target="_blank"><img src="images/drive-fill.png" alt="Google Drive"></a>
-        </section>
+        </section> -->
     </div>
     <div class="footer-social-links"> <svg class="footer-social-amoeba-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 236 54">
         <path class="footer-social-amoeba-path" d="M223.06,43.32c-.77-7.2,1.87-28.47-20-32.53C187.78,8,180.41,18,178.32,20.7s-5.63,10.1-4.07,16.7-.13,15.23-4.06,15.91-8.75-2.9-6.89-7S167.41,36,167.15,33a18.93,18.93,0,0,0-2.64-8.53c-3.44-5.5-8-11.19-19.12-11.19a21.64,21.64,0,0,0-18.31,9.18c-2.08,2.7-5.66,9.6-4.07,16.69s.64,14.32-6.11,13.9S108.35,46.5,112,36.54s-1.89-21.24-4-23.94S96.34,0,85.23,0,57.46,8.84,56.49,24.56s6.92,20.79,7,24.59c.07,2.75-6.43,4.16-12.92,2.38s-4-10.75-3.46-12.38c1.85-6.6-2-14-4.08-16.69a21.62,21.62,0,0,0-18.3-9.18C13.62,13.28,9.06,19,5.62,24.47A18.81,18.81,0,0,0,3,33a21.85,21.85,0,0,0,1.58,9.08,16.58,16.58,0,0,1,1.06,5A6.75,6.75,0,0,1,0,54H236C235.47,54,223.83,50.52,223.06,43.32Z"></path>
