frontend update changes

--- a/Home/index.html
+++ b/Home/index.html
@@ -14,9 +14,9 @@
             <img src="Logo-JobBoard.png" alt="Logo de Job-Board-CH" class="logo" />
             <ul>
                 <li><a href="#">Accueil</a></li>
-                <li><a href="#">Offres d'emploi</a></li>
+                <li><a href="../Auth//GestionEmploisutilisateur.php">Offres d'emploi</a></li>
                 <li><a href="./contact.html">Contact</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="../Auth//login.html">Login</a></li>
             </ul>
             
             <div class="dropdown">
@@ -24,8 +24,8 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Utilisateur</a>
-      <a href="#">Entreprise</a>
+      <a href="../Auth/InscriUtilisateur.html">Utilisateur</a>
+      <a href="../Auth//inscriEntreprise.html">Entreprise</a>
     </div>
   </div> 
 
