--- a/Home/index.html
+++ b/Home/index.html
@@ -85,7 +85,7 @@
   <div class="footer-copyright">
     <div class="footer-copyright-wrapper">
       <p class="footer-copyright-text">
-        <a class="footer-copyright-link" href="#" target="_self"> ©2020. | Designed By: Pooja Nahelia. | All rights reserved. </a>
+        <a class="footer-copyright-link" href="#" target="_self"> ©2024. | CH-JOB-BOARD. | All rights reserved. </a>
       </p>
     </div>
   </div>
