Update Commit css html5

--- a/Auth/InscriUtilisateur.html
+++ b/Auth/InscriUtilisateur.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <link rel="stylesheet" href="styles.css">
-    <title>Job-Board-CH</title>
-=======
     <link rel="stylesheet" href="./css.css">
     <title>Inscription Utilisateur</title>
->>>>>>> 862e914325025b5c8141cc603cf3d57ebb77d2b5
+
 </head>
 <body>
     <div class="container">
         <nav>
             <img src="Logo-JobBoard.png" alt="Logo de Job-Board-CH" class="logo" />
             <ul>
-                <li><a href="#">Accueil</a></li>
+                <li><a href="../Home/index.html">Accueil</a></li>
                 <li><a href="#">Offres d'emploi</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Login</a></li>
+                <li><a href="../Home/contact.html">Contact</a></li>
+                <li><a href="../Auth/login.html">Login</a></li>
             </ul>
             
             <div class="dropdown">
