--- a/Auth/inscriEntreprise.html
+++ b/Auth/inscriEntreprise.html
@@ -17,21 +17,21 @@
         <nav>
             <img src="Logo-JobBoard.png" alt="Logo de Job-Board-CH" class="logo" />
             <ul>
-                <li><a href="../Home/index.html">Accueil</a></li>
-                <li><a href="#">Candidature</a></li>
-                <li><a href="../Home/contact.html">Contact</a></li>
-                <li><a href="../Auth/login.html">Login</a></li>
-            </ul>
+                    <li><a href="../Home/index.html">Accueil</a></li>
+                    <li><a href="#">Offres d'emploi</a></li>
+                    <li><a href="../Home/contact.html">Contact</a></li>
+                    <li><a href="./login.html">Login</a></li>
+                </ul>
             
-            <div class="dropdown">
+            <!-- <div class="dropdown">
     <button class="dropbtn">Register  
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="#">Utilisateur</a>
-      <a href="#">Entreprise</a>
+        <a href="./InscriUtilisateur.html">Utilisateur</a>
+          <a href="./inscriEntreprise.html">Entreprise</a>
     </div>
-  </div> 
+  </div>  -->
         <div class="container-register">
     <h2>Inscription Entreprise</h2>
 
