--- a/Auth/login.html
+++ b/Auth/login.html
@@ -4,12 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <link rel="stylesheet" href="../css.css">
     <link rel="stylesheet" href="styles.css">
-=======
     <link rel="stylesheet" href="./css.css">
->>>>>>> 862e914325025b5c8141cc603cf3d57ebb77d2b5
+
     <title>Login</title>
     <script>
         function storeInLocalStorage(userId, userType) {
@@ -24,10 +22,10 @@
             <nav>
                 <img src="Logo-JobBoard.png" alt="Logo de Job-Board-CH" class="logo" />
                 <ul>
-                    <li><a href="#">Accueil</a></li>
+                    <li><a href="../../Home/index.html">Accueil</a></li>
                     <li><a href="#">Offres d'emploi</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Login</a></li>
+                    <li><a href="../contact.html">Contact</a></li>
+                    <li><a href="./login.html">Login</a></li>
                 </ul>
                 
                 <div class="dropdown">
@@ -35,8 +33,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#">Utilisateur</a>
-          <a href="#">Entreprise</a>
+          <a href="./InscriUtilisateur.html">Utilisateur</a>
+          <a href="./inscriEntreprise.html">Entreprise</a>
         </div>
       </div> 
     
