--- a/Auth/login.html
+++ b/Auth/login.html
@@ -66,7 +66,7 @@
             <option value="entreprise">Entreprise</option>
         </select><br>
 </div>
-            <div class="box" style="background: #2d3e3f">
+            <div class="box" >
 
         <input type="submit" value="Se connecter" class="submit-register">
 </div>
