--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -24,9 +26,6 @@
                         <img src="images/cc1.png" alt="Logo" />
                         <h3>Coding City</h3>
                     </div>
-                    <div class="close" id="closeSidebar">
-                        <span class="material-icons-sharp"> close </span>
-                    </div>
                 </header>
 
                 <div class="sidebar" id="sidebar">
@@ -34,9 +33,9 @@
                         <li class="item">
                             <a href="#">
                                 <span class="material-icons-sharp">
-                                    dashboard
+                                    people
                                 </span>
-                                <span>Tableau de bord</span>
+                                <span>emploi</span>
                             </a>
                         </li>
                         <li class="item">
@@ -45,47 +44,6 @@
                                     people
                                 </span>
                                 <span>Clients</span>
-                            </a>
-                        </li>
-                        <li class="item">
-                            <a href="#">
-                                <span class="material-icons-sharp">
-                                    shopping_cart
-                                </span>
-                                <span>Commandes</span>
-                            </a>
-                        </li>
-                        <li class="item">
-                            <a href="#" class="">
-                                <span class="material-icons-sharp">
-                                    insights
-                                </span>
-                                <span>Statistiques</span>
-                            </a>
-                        </li>
-                        <li class="item">
-                            <a href="#" class="active">
-                                <span class="material-icons-sharp">
-                                    textsms
-                                </span>
-                                <span>Messagerie</span>
-                                <span class="message-count">17</span>
-                            </a>
-                        </li>
-                        <li class="item">
-                            <a href="#">
-                                <span class="material-icons-sharp">
-                                    inventory
-                                </span>
-                                <span>Produits</span>
-                            </a>
-                        </li>
-                        <li class="item">
-                            <a href="#">
-                                <span class="material-icons-sharp">
-                                    report
-                                </span>
-                                <span>Rapports</span>
                             </a>
                         </li>
                         <li class="item">
@@ -119,7 +77,7 @@
                 <h1 class="main-title">Dashboard</h1>
 
                 <!-- CARD -->
-                <div class="insights">
+                <!-- <div class="insights">
                     <div class="card">
                         <div class="card-container">
                             <div class="card-header">
@@ -153,42 +111,7 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="card">
-                        <div class="card-container">
-                            <div class="card-header">
-                                <span class="material-icons-sharp">
-                                    add_shopping_cart
-                                </span>
-                            </div>
-                            <div class="card-body">
-                                <div class="card-info">
-                                    <h3>Commandes</h3>
-                                    <h1>780</h1>
-                                </div>
-
-                                <div class="card-progress">
-                                    <svg width="96" height="96">
-                                        <circle
-                                            id="circle2"
-                                            cx="38"
-                                            cy="38"
-                                            r="36"
-                                            class="stroke-fuscha"
-                                        ></circle>
-                                    </svg>
-                                    <div class="percentage">
-                                        <p>72%</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card-footer">
-                                <small>Sur les 48H precedentes</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card">
+                   <div class="card">
                         <div class="card-container">
                             <div class="card-header">
                                 <span class="material-icons-sharp">
@@ -224,7 +147,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <!-- RECENT ORDERS -->
                 <section class="recent-orders">
@@ -235,215 +158,53 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>ID</th>
-                                <th>Produit</th>
-                                <th>Serie</th>
-                                <th>Paiement</th>
-                                <th>Statut</th>
-                                <th>Details</th>
-                            </tr>
+                        <th>ID de l'emploi</th>
+                        <th>Titre de l'emploi</th>
+                        <th>ID de l'utilisateur</th>
+                        <th>Nom de l'utilisateur</th>
+                        <th>Prénom de l'utilisateur</th>
+                        <th>Description de l'utilisateur</th>
+                        <th>Action</th>
+                    </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>12</td>
-                                <td>PC Gamer</td>
-                                <td>uac55012s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                            <tr>
-                                <td>13</td>
-                                <td>Sony PS5</td>
-                                <td>uac55442s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                            <tr>
-                                <td>14</td>
-                                <td>PC Monitor</td>
-                                <td>uac578012s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                            <tr>
-                                <td>15</td>
-                                <td>Sony PS5</td>
-                                <td>uac55442s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                            <tr>
-                                <td>16</td>
-                                <td>PC Monitor</td>
-                                <td>uac578012s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                            <tr>
-                                <td>15</td>
-                                <td>Sony PS5</td>
-                                <td>uac55442s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                            <tr>
-                                <td>12</td>
-                                <td>PC Gamer</td>
-                                <td>uac55012s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                            <tr>
-                                <td>18</td>
-                                <td>PC Monitor</td>
-                                <td>uac578012s-dpX</td>
-                                <td>Doit</td>
-                                <td class="text-fuscha">Non payee</td>
-                                <td>3 jours restants</td>
-                            </tr>
-                        </tbody>
+                      <tbody>
+                    <?php
+                    foreach ($applicationsData as $applicationItem) {
+                        $applications = $application->getApplicationsParEmploi($applicationItem['id_emploi']);
+                        if ($applications) {
+                            foreach ($applications as $applicationData) {
+                                ?>
+                                <tr>
+                                    <td><?php echo $applicationData['id_emploi']; ?></td>
+                                    <td><?php echo $applicationData['titre']; ?></td>
+                                    <td><?php echo $applicationData['id_utilisateur']; ?></td>
+                                    <td><?php echo $applicationData['nom']; ?></td>
+                                    <td><?php echo $applicationData['prenom']; ?></td>
+                                    <td><?php echo $applicationData['description_utilisateur']; ?></td>
+                                    <td>
+                                        <form method='post' class='forme-ac-ref'>
+                                            <input type='hidden' name='id_user' value='<?php echo $applicationData['id_utilisateur']; ?>' />
+                                            <input type='hidden' name='id_emploi' value='<?php echo $applicationData['id_emploi']; ?>' />
+                                            <div class='action-buttons'>
+                                                <button class='accept-button' type='submit' name='accepter'>Accepter</button>
+                                                <button class='reject-button' type='submit' name='refuser'>Refuser</button>
+                                            </div>
+                                        </form>
+                                    </td>
+                                </tr>
+                                <?php
+                            }
+                        } else {
+                            echo "<tr><td colspan='7'>Aucune application trouvée pour cet emploi.</td></tr>";
+                        }
+                    }
+                    ?>
+                </tbody>
                     </table>
                 </section>
             </main>
 
-            <!-- Sidebar droite -->
-            <aside class="extrabar">
-                <header class="header-right">
-                    <button class="toggle-menu-btn" id="openSidebar">
-                        <span class="material-icons-sharp"> menu </span>
-                    </button>
-
-                    <div class="toggle-theme">
-                        <span class="material-icons-sharp active">
-                            tungsten
-                        </span>
-                        <span class="material-icons-sharp"> dark_mode </span>
-                    </div>
-                    <div class="profile">
-                        <div class="profile-info">
-                            <p>Salut, <strong>Coding</strong></p>
-                            <small>Admin</small>
-                        </div>
-                        <div class="profile-image">
-                            <img src="images/team-4.jpg" alt="" width="100%" />
-                        </div>
-                    </div>
-                </header>
-
-                <!-- Info recentes -->
-                <div class="recent-updates">
-                    <h2>Infos recentes</h2>
-                    <div class="updates-container">
-                        <div class="update">
-                            <div class="profile-image">
-                                <img
-                                    src="images/team-1.jpg"
-                                    alt=""
-                                    width="100%"
-                                />
-                            </div>
-                            <div class="message">
-                                <p>
-                                    <strong>Arthur</strong> Lorem ipsum dolor
-                                    sit amet consectetur adipisicing elit.
-                                </p>
-                                <small>Il y a 8 minutes</small>
-                            </div>
-                        </div>
-                        <div class="update">
-                            <div class="profile-image">
-                                <img
-                                    src="images/team-2.jpg"
-                                    alt=""
-                                    width="100%"
-                                />
-                            </div>
-                            <div class="message">
-                                <p>
-                                    <strong>Alicia</strong> Lorem ipsum, dolor
-                                    sit amet consectetur adipisicing.
-                                </p>
-                                <small>Il y a 1 heures</small>
-                            </div>
-                        </div>
-                        <div class="update">
-                            <div class="profile-image">
-                                <img
-                                    src="images/team-3.jpg"
-                                    alt=""
-                                    width="100%"
-                                />
-                            </div>
-                            <div class="message">
-                                <p>
-                                    <strong>Thomas</strong> Lorem ipsum dolor
-                                    sit amet consectetur adipisicing elit.
-                                </p>
-                                <small>Il y a 3 heures</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Stat -->
-                <div class="analytics">
-                    <h2>Evolution des ventes</h2>
-                    <div class="order direct">
-                        <div class="order-icon">
-                            <span class="material-icons-sharp">
-                                shopping_cart
-                            </span>
-                        </div>
-                        <div class="order-details">
-                            <div class="info">
-                                <h3>COMMANDES DIRECTES</h3>
-                                <small>48H precedentes</small>
-                            </div>
-                            <h4 class="percent-evo text-cyan">+18%</h4>
-                            <h3>2417</h3>
-                        </div>
-                    </div>
-                    <div class="order online">
-                        <div class="order-icon">
-                            <span class="material-icons-sharp"> wifi </span>
-                        </div>
-                        <div class="order-details">
-                            <div class="info">
-                                <h3>COMMANDES DIRECTES</h3>
-                                <small>48H precedentes</small>
-                            </div>
-                            <h4 class="percent-evo text-fuscha">-5%</h4>
-                            <h3>619</h3>
-                        </div>
-                    </div>
-                    <div class="order customers">
-                        <div class="order-icon">
-                            <span class="material-icons-sharp">
-                                group_add
-                            </span>
-                        </div>
-                        <div class="order-details">
-                            <div class="info">
-                                <h3>COMMANDES DIRECTES</h3>
-                                <small>48H precedentes</small>
-                            </div>
-                            <h4 class="percent-evo text-cyan">+22%</h4>
-                            <h3>411</h3>
-                        </div>
-                    </div>
-                    <button class="new-product">
-                        <span class="material-icons-sharp"> add </span>
-                        <h3>Nouveau produit</h3>
-                    </button>
-                </div>
-            </aside>
+            
         </div>
 
         <script src="script.js"></script>
