--- a/Auth/login.html
+++ b/Auth/login.html
@@ -22,7 +22,7 @@
             <nav>
                 <img src="Logo-JobBoard.png" alt="Logo de Job-Board-CH" class="logo" />
                 <ul>
-                    <li><a href="../../Home/index.html">Accueil</a></li>
+                    <li><a href="../Home/index.html">Accueil</a></li>
                     <li><a href="#">Offres d'emploi</a></li>
                     <li><a href="../contact.html">Contact</a></li>
                     <li><a href="./login.html">Login</a></li>
