--- a/Home/contact.html
+++ b/Home/contact.html
@@ -6,10 +6,12 @@
   <title>Responsive Contact Us Page</title>
   <script src="https://kit.fontawesome.com/c32adfdcda.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="contact.css">
+  <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
-<body>
-  
-  <section>
+<body >
+  <div class="contact-body">
+
+  <section >
     
     <div class="section-header">
      <a href="javascript:history.go(-1);" class="navigation-button">
@@ -21,7 +23,6 @@
 
       <div class="container">
         <h2>Contact Us</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
       </div>
     </div>
     
@@ -90,6 +91,15 @@
       </div>
     </div>
   </section>
+    <div class="footer-copyright">
+      <div class="footer-copyright-wrapper">
+        <p class="footer-copyright-text">
+          <a class="footer-copyright-link" href="#" target="_self"> ©2024. | CH-JOB-BOARD. | All rights reserved. </a>
+        </p>
+      </div>
+    </div>
+  
+</div>
   
 </body>
 </html>
