update last app job-Board-CH

--- a/Home/index.html
+++ b/Home/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <li><a href="#">Accueil</a></li>
                 <li><a href="../Auth//GestionEmploisutilisateur.php">Offres d'emploi</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="\Job-Board-Ch\Home\contact.html">Contact</a></li>
                 <li><a href="../Auth//login.html">Login</a></li>
             </ul>
             
@@ -37,8 +37,8 @@
 
     <div class="row">
         <div class="btns">
-        <a href="#" class="discover-offers">Découvrez nos offres</a>
-        <a href="#" class="search-jobs">Recherchez des emplois <span>&#x27f6;</span></a>
+        <a href="../Auth//GestionEmploisutilisateur.php" class="discover-offers">Découvrez nos offres</a>
+        <!-- <a href="../Auth//GestionEmploisutilisateur.php" class="search-jobs">Recherchez des emplois <span>&#x27f6;</span></a> -->
         </div>
         <div class="desc_bottom_btns" >
         <span class="job-search-description">
